refactor: split server scope
